oc/01-with-deployment/050-Route.yaml
kind: Route
apiVersion: v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: lbb
spec:
  to:
    kind: Service
    name: counter-backend
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
kind: Route
apiVersion: v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: lbb
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
kind: Route
apiVersion: v1
metadata:
  name: counter-postgresadmin
  labels:
    app: counter-postgresadmin
    app.kubernetes.io/part-of: lbb
spec:
  to:
    kind: Service
    name: counter-postgresadmin
  port:
    targetPort: 5050-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
